--- a/mycelium/apps/flight_control/templates/flight_control/home.html
+++ b/mycelium/apps/flight_control/templates/flight_control/home.html
@@ -1,15 +1,7 @@
 {% extends "flight_control/base.html" %}
-{% load i18n flip_clock %}
-{% block title %}Dashboard{% endblock %}
-{% block css %}{{block.super}}
-{% css "/css/contrib/1140/1140.css" %}
-{% css "/css/flight_control.css" %}
-{% endblock %}
-{% block javascript %}{{block.super}}
-{% js "/js/mycelium/flight_control.js" %}
-{% endblock %}
+{% load i18n flip_clock humanize %}
+{% block title %}GoodCloud Flight Control{% endblock %}
 
-{% block breadcrumb %}{% endblock %}
 {% block page_content %}
 
 <div class="container">
@@ -28,7 +20,7 @@
 			{% flip_clock week_1 "Trial Week 1"  %}
 			{% flip_clock week_2 "Trial Week 2"  %}
 			{% flip_clock week_3 "Trial Week 3"  %}
-			{% flip_clock week_4 "Trial Week 4"  %}
+			{% flip_clock week_4.count "Trial Week 4"  %}
 		</span>
 	</div>
 </div>
@@ -44,61 +36,83 @@
 		<column class="fourcol billing_issues">
 			<column_header>Billing Issues</column_header>
 			{% for a in problem_accounts %}
-			<div class="account_info_block">
+			<div class="info_block">
 				<a href="{% url flight_control:account a.pk %}">{{a.name}}</a> is {{a.get_status_display}}.
 			</div>
 			{% empty %}
-			<div class="empty_message">No accounts with billing issues! Hooray!</div>
+			<div class="info_block empty_message">No accounts with billing issues! Hooray!</div>
+			{% endfor %}
+
+			<column_header>Expiring Soon</column_header>
+			{% for a in week_4 %}
+			<div class="info_block">
+				<a href="{% url flight_control:account a.pk %}">{{a.name}}</a> expires {{a.free_trial_ends|date}}.
+			</div>
+			{% empty %}
+			<div class="info_block empty_message">None in the next week.</div>
 			{% endfor %}
 		</column>
 		<column class="fourcol recent_activity">
 			<column_header>Recent Activity</column_header>
-			<div class="activity_block">
+			<div class="empty_message info_block">
+				Still working on the activity tracker.
+			</div>
+			<!--
+			<div class="info_block">
 				Steven Skoczen with <a href="#">Account Name</a> edited a person. <span class="when">15 minutes ago</span>
 			</div>
-			<div class="activity_block">
+			<div class="info_block">
 				Steven Skoczen with <a href="#">Account Name</a> created a group. <span class="when">22 minutes ago</span>
 			</div>
-			<div class="activity_block">
+			<div class="info_block">
 				Tom Noble with <a href="#">Account Name</a> imported a spreadsheet. <span class="when">47 minutes ago</span>
 			</div>
+			-->
 		</column>
 		<column class="fourcol averages">
-			<column_header>Averages</column_header>
-
-			<average>
-				<number>52</number>
-				<caption>People</caption>
+			<column_header>Account Averages</column_header>
+			<average class="info_block number_row">
+				<number>{{avg_people|floatformat:0|intcomma}}</number>
+				<description>People</description>
 			</average>
 
-			<average>
-				<number>21</number>
-				<caption>Organization</caption>
+			<average class="info_block number_row">
+				<number>{{avg_organizations|floatformat:0|intcomma}}</number>
+				<description>Organizations</description>
 			</average>
 
-			<average>
-				<number>21</number>
-				<caption>Donations</caption>
+			<average class="info_block number_row">
+				<number>{{avg_donations|floatformat:0|intcomma}}</number>
+				<description>Donations</description>
 			</average>
-			<average>
-				<number>21</number>
-				<caption>per Donation</caption>
+			<average class="info_block number_row">
+				<number>${{avg_donation|floatformat:2|intcomma}}</number>
+				<description>Per Donation</description>
 			</average>
-			<average>
-				<number>21</number>
-				<caption>Vol Hours</caption>
+			<average class="info_block number_row">
+				<number>{{avg_volunteer_hours|floatformat:0|intcomma}}</number>
+				<description>Volunteer Hours</description>
 			</average>
-			<average>
-				<number>21</number>
-				<caption>Tags</caption>
+			<average class="info_block number_row">
+				<number>{{avg_vol_hours_per_person|floatformat:0|intcomma}}</number>
+				<description>Volunteer Hours per person</description>
 			</average>
-			<average>
-				<number>21</number>
-				<caption>Tags per Person</caption>
+			
+			<average class="info_block number_row">
+				<number>{{avg_tags|floatformat:0|intcomma}}</number>
+				<description>Tags</description>
 			</average>
-			<average>
-				<number>21</number>
-				<caption>Spreadsheets</caption>
+			<average class="info_block number_row">
+				<number>{{avg_tags_per_person|floatformat:1|intcomma}}</number>
+				<description>Tags per Person</description>
+			</average>
+			<average class="info_block number_row">
+				<number>{{avg_groups|floatformat:1|intcomma}}</number>
+				<description>Groups</description>
+			</average>
+			<average class="info_block number_row">
+				<number>{{avg_spreadsheets|floatformat:1|intcomma}}</number>
+				<description>Spreadsheets</description>
 			</average>
 		</column>
 	</div>
