--- a/media/css/flight_control.css
+++ b/media/css/flight_control.css
@@ -6,7 +6,10 @@ main_content {
 	left: auto;
 	right: 5%;
 }
-
+#global_search_results {
+	left: auto;
+	right: 4.1%;
+}
 main_nav .account_name {
 	font-size: 30px;
 	width: 100%;
@@ -178,6 +181,7 @@ column_header {
 	border: 1px solid #DDD;
 	border-width: 0px 0px 1px 0px;
 	margin: 8px 0px 6px 0px ;
+	font-family: 'ExpresswayRegular',"Droid Sans", "Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif;
 }
 average {
 	display: block;
@@ -215,4 +219,17 @@ average {
 	padding: 10px 0px 0px 0px;
 	margin-left: 140px;
 	display: block;
+}
+.name_and_info {
+	
+}
+.name_and_info .name {
+	font-size: 60px;
+	padding: 10px 0px 0px 10px;
+	font-family: 'ExpresswayRegular',"Droid Sans", "Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif;	
+}
+.name_and_info .url {
+	font-size: 20px;
+	color: #999;
+	padding: 0px 0px 0px 13px;
 }
