--- a/mycelium/apps/flight_control/templates/flight_control/home.html
+++ b/mycelium/apps/flight_control/templates/flight_control/home.html
@@ -75,12 +75,14 @@
 				<number>{{avg_people|floatformat:0|intcomma}}</number>
 				<description>People</description>
 			</average>
-
 			<average class="info_block number_row">
 				<number>{{avg_organizations|floatformat:0|intcomma}}</number>
 				<description>Organizations</description>
 			</average>
-
+			<average class="info_block number_row">
+				<number>{{avg_users|floatformat:1|intcomma}}</number>
+				<description>Users Accounts</description>
+			</average>
 			<average class="info_block number_row">
 				<number>{{avg_donations|floatformat:0|intcomma}}</number>
 				<description>Donations</description>
@@ -97,7 +99,6 @@
 				<number>{{avg_vol_hours_per_person|floatformat:1|intcomma}}</number>
 				<description>Volunteer Hours per person</description>
 			</average>
-			
 			<average class="info_block number_row">
 				<number>{{avg_tags|floatformat:0|intcomma}}</number>
 				<description>Tags</description>
