--- a/mycelium/apps/flight_control/templates/flight_control/home.html
+++ b/mycelium/apps/flight_control/templates/flight_control/home.html
@@ -88,7 +88,7 @@
 			</average>
 			<average class="info_block number_row">
 				<number>{{avg_users|floatformat:1|intcomma}}</number>
-				<description>Users Accounts</description>
+				<description>User Accounts</description>
 			</average>
 			<average class="info_block number_row">
 				<number>{{avg_donations|floatformat:0|intcomma}}</number>
