lots of bugfixes - birthdays in groups and spreadsheets, empty spreadsheet download bugs,  better 500 page.

--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -41,6 +41,10 @@ a {
 a:hover { 
 	text-decoration: underline;
 }
+input, textarea {
+	font-size: 1.0em;	
+}
+
 main_nav a.logo {
 	width: 180px;
 	float: left;
