--- a/media/css/error_pages.css
+++ b/media/css/error_pages.css
@@ -1,22 +1,19 @@
 #error_message {
-	width: 70%;
+	width: 80%;
 	margin: 40px auto;
 }
 #error_message .adorable_image {
 	text-align: center;
-	margin-bottom: 20px;
+	margin-bottom: 00px;
 }
 #error_message h1 {
-	text-align: center;
-	font-size: 36px;
+	text-align: left;
+	font-size: 20px;
 }
 .detail_box {
-	border: 1px solid #DDD;
-	padding: 10px;
-	box-shadow: 		2px 2px 4px rgba(0,0,0,0.35);
-	-moz-box-shadow:	2px 2px 4px rgba(0,0,0,0.35);
-	-khtml-box-shadow: 	2px 2px 4px rgba(0,0,0,0.35);
-	-webkit-box-shadow: 2px 2px 4px rgba(0,0,0,0.35);
+	
+	padding: 0px 40px;
+	
 	background-color: #FDFDFd;
 	border-radius: 12px;
 	-moz-border-radius: 12px;
@@ -28,10 +25,10 @@
 
 }
 body {
-	background-color: #DDD;
+	background-color: #FFF;
 	height: 100%;
-	background-color: #0a5ab9;
-	background-image: url("../images/marketing-background-plain-4.jpg");	
+	/*background-color: #0a5ab9;
+	background-image: url("../images/marketing-background-plain-4.jpg");	*/
 	background-repeat: no-repeat;
 	background-position: 50% 0px;
 }
