--- a/mycelium/apps/spreadsheets/templates/spreadsheets/_search_results.html
+++ b/mycelium/apps/spreadsheets/templates/spreadsheets/_search_results.html
@@ -4,7 +4,8 @@
 <table class="results_table striped">
 	<tr class="person_row header">
 		<th class="name">Name</th>
-		<th class="count"># of Rows</th>
+		<th class="count">{# # of People #}</th>
+		{# <th class="count"># of Rows</th> #}
 		<th class="download"></th>
 	</tr>
 {% for p in search_proxies %}{{p.search_result_row|safe}}{% endfor %}
