--- a/mycelium/apps/dashboard/templates/dashboard/_goodcloud_news.html
+++ b/mycelium/apps/dashboard/templates/dashboard/_goodcloud_news.html
@@ -1,20 +1,34 @@
 <column_content class="plain_text news">
+
+<news_story>
+<span class="date">July 23, 2011</span>
+<span class="story_body">Lots of fixes throughout - check out the blog for all the details.</span>
+</news_story>
+<news_story>
+
+<news_story>
+<span class="date">July 17, 2011</span>
+<span class="story_body">You can now actually pay for GoodCloud!  To update your billing information, go to your <a href="{% url accounts:manage_account %}">account page</a>.</span>
+</news_story>
+<news_story>
+
 <news_story>
 <span class="date">July 9, 2011</span>
 <span class="story_body">Welcome to the brand-new look of GoodCloud! We've cleaned things up all over, and re-organized to make it clearer and easier to use. Let us know what you think!</span>
 </news_story>
 <news_story>
-<news_story>
-<span class="date">July 2, 2011</span>
-<span class="story_body">Conversations and Birthdays are here! Now, from each person's page, you can add notes or a transcript from any conversation you have with them.  Remembering a donor's history just got a lot easier. :)<br/><br/>We've also added birthdays for each person. Birthdays are searchable for groups, and will also show up here on the dashboard!</span>
-</news_story>
-<news_story>
-<span class="date">July 1, 2011</span>
-<span class="story_body">Upgrade schedule.  We now have an upgrade schedule set.  GoodCloud will be upgraded each week, on Saturday nights, between 8 and 9 PST.</span>
-</news_story>
+
 
 <a href="#" class="older_news_link">Older News</a>
 <span class="archived_news hidden">
+	<news_story>
+	<span class="date">July 2, 2011</span>
+	<span class="story_body">Conversations and Birthdays are here! Now, from each person's page, you can add notes or a transcript from any conversation you have with them.  Remembering a donor's history just got a lot easier. :)<br/><br/>We've also added birthdays for each person. Birthdays are searchable for groups, and will also show up here on the dashboard!</span>
+	</news_story>
+	<news_story>
+	<span class="date">July 1, 2011</span>
+	<span class="story_body">Upgrade schedule.  We now have an upgrade schedule set.  GoodCloud will be upgraded each week, on Saturday nights, between 8 and 9 PST.</span>
+	</news_story>
 	<news_story>
 	<span class="date">June 16, 2011</span>
 	<span class="story_body">Spreadsheets have arrived! You can now easily create and download spreadsheets of your data, using the spreadsheet link up top.</span>
