--- a/mycelium/apps/flight_control/templates/flight_control/home.html
+++ b/mycelium/apps/flight_control/templates/flight_control/home.html
@@ -55,7 +55,7 @@
 		<column class="fourcol recent_activity">
 			<column_header>Recent Logins</column_header>
 			{% for u in recent_users %}
-			<div class="info_block">
+			<div class="info_block login_block">
 				{{u.last_login|date}} - {{u.first_name}} ({% if u.get_profile %}<a href="{% url flight_control:account u.get_profile.account.pk %}">{{u.get_profile.account.name}}</a>{% else %}Internal{% endif %})
 			</div>
 		 	{% endfor %}
