reqs lock the qi-toolkit version, new user agreement

--- a/mycelium/apps/marketing_site/templates/marketing_site/legal.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/legal.html
@@ -65,6 +65,17 @@
 		<li>Questions about the Terms of Service should be sent to support email support@agoodcloud.com.</li>
 		</ul>
 
+		<h3>Personal Information</h3>
+		<p>In the course of using the Service, we may collect personal information that can be used to contact or identify you (“Personal Information”). Personal Information is or may be used:</p>
+		<ul>
+			<li>to provide you with and improve our Service</li>
+			<li>to administer your use of the Service</li>
+			<li>to better understand your needs and interests</li>
+			<li>to personalize and improve your experience</li>
+			<li>to provide or offer updates and product announcements. </li>
+			<li>If you no longer wish to receive communications from us, please follow the “unsubscribe” instructions provided in any of those communications</li>
+		</ul>
+
 		<h3>Modifications to the Service and Prices</h3>
 		<ul>
 		<li>GoodCloud reserves the right at any time and from time to time to modify or discontinue, temporarily or permanently, the Service (or any part thereof) with or without notice.</li>
