--- a/mycelium/apps/rewrite/templates/rewrite/base.html
+++ b/mycelium/apps/rewrite/templates/rewrite/base.html
@@ -6,9 +6,9 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>{{page.title}}</title>
-  <meta name="description" content="{{page.description}}">
-  <meta name="description" content="{{page.keywords}}">
+  <title>{% block title %}{% endblock %}</title>
+  <meta name="description" content="{% block description %}{% endblock %}">
+  <meta name="description" content="{% block keywords %}{% endblock %}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="{{STATIC_URL}}/favicon.ico">
   <link rel="apple-touch-icon" href="{{STATIC_URL}}/apple-touch-icon.png">
@@ -23,22 +23,15 @@
   {# <link rel="stylesheet" href="{{STATIC_URL}}css/styles.css" type="text/css" media="screen" /> #}
   {% endblock %}
 
-  {{template.extra_head_html}}
+  {% block extra_head_html %}{% endblock %}
 </head>
 
 <body>
 
   <div id="container">
-    <header>
-  		{{ template.page_header_html }}
-	  	{# main navigation #}
-	  	{# section navigation #}
-    </header>
-    <div id="main" role="main">
-	  {{ template.pre_content_html }}
-	  {{ page.content }}
-	  {{ template.post_content_html }}
-    </div>
+   {% block content %}
+
+   {% endblock %}
   </div>
 
   {% block js %}
