--- a/mycelium/apps/rewrite/templates/rewrite/base.html
+++ b/mycelium/apps/rewrite/templates/rewrite/base.html
@@ -39,7 +39,7 @@
   <script>window.jQuery || document.write("<script src='{{STATIC_URL}}js/libs/jquery-1.5.1.min.js'>\x3C/script>")</script>
   <script src="{{STATIC_URL}}js/plugins.js"></script>
   <script src="{{STATIC_URL}}js/script.js"></script>
-  <script type="text/javascript" src="{{STATIC_URL}}js/css3-mediaqueries.js"></script>
+  <script type="text/javascript" src="{{STATIC_URL}}js/libs/css3-mediaqueries.js"></script>
 
   <!--[if lt IE 7 ]>
     <script src="{{STATIC_URL}}js/libs/dd_belatedpng.js"></script>
