--- a/mycelium/apps/rewrite/templates/rewrite/manage/_tabs.html
+++ b/mycelium/apps/rewrite/templates/rewrite/manage/_tabs.html
@@ -1,6 +1,6 @@
-<ul class="tabs">
-	<li class="tab pages {% if tabs == "pages" %}current{% endif %}" ><a href="{% url rewrite:manage_pages %}">Pages</a></li>
-	<li class="tab blog {% if tabs == "blog" %}current{% endif %}" ><a href="{% url rewrite:manage_blog %}">Blog</a></li>
-	<li class="tab template {% if tabs == "template" %}current{% endif %}" ><a href="{% url rewrite:manage_templates %}">Templates</a></li>
-	<li class="tab settings {% if tabs == "settings" %}current{% endif %}" ><a href="{% url rewrite:manage_settings %}">Settings</a></li>
-</ul>
+<div class="tabs">
+	<a class="tab pages {% if tab == "pages" %}current{% endif %}" href="{% url rewrite:manage_pages %}">Pages</a>
+	<a class="tab blog {% if tab == "blog" %}current{% endif %}" href="{% url rewrite:manage_blog %}">Blog</a>
+	<a class="tab template {% if tab == "templates" %}current{% endif %}" href="{% url rewrite:manage_templates %}">Templates</a>
+	<a class="tab settings {% if tab == "settings" %}current{% endif %}" href="{% url rewrite:manage_settings %}">Settings</a>
+</div>
