basic page layout is working.

--- a/mycelium/apps/rewrite/templates/rewrite/manage/settings.html
+++ b/mycelium/apps/rewrite/templates/rewrite/manage/settings.html
@@ -1,5 +1,6 @@
 {% extends "rewrite/manage/base.html" %}
 {% block manage_page_content %}
 	Settings
-	
+	{{blog_settings_form}}
+	{{website_settings_form}}
 {% endblock %}
