--- a/mycelium/apps/rewrite/templates/rewrite/manage/settings.html
+++ b/mycelium/apps/rewrite/templates/rewrite/manage/settings.html
@@ -1,6 +1,9 @@
 {% extends "rewrite/manage/base.html" %}
 {% block manage_page_content %}
 	Settings
+	<form action="" method="POST">{% csrf_token %}
 	{{blog_settings_form}}
 	{{website_settings_form}}
+		<input type="submit">
+	</form>
 {% endblock %}
