--- a/mycelium/apps/rewrite/templates/rewrite/base.html
+++ b/mycelium/apps/rewrite/templates/rewrite/base.html
@@ -13,14 +13,14 @@
   <link rel="shortcut icon" href="{{STATIC_URL}}/favicon.ico">
   <link rel="apple-touch-icon" href="{{STATIC_URL}}/apple-touch-icon.png">
 
-  <link rel="stylesheet" href="{{STATIC_URL}}css/style.css?v=2">
-  <script src="{{STATIC_URL}}js/libs/modernizr-1.7.min.js"></script>
+  <link rel="stylesheet" href="{{STATIC_URL}}css/rewrite/style.css?v=2">
+  <script src="{{STATIC_URL}}js/rewrite/libs/modernizr-1.7.min.js"></script>
 	
   {% block css %}
   <!-- The 1140px Grid - http://cssgrid.net/ -->
-  <!--[if lte IE 9]><link rel="stylesheet" href="{{STATIC_URL}}css/ie.css" type="text/css" media="screen" /><![endif]-->
-  <link rel="stylesheet" href="{{STATIC_URL}}css/1140.css" type="text/css" media="screen" />
-  {# <link rel="stylesheet" href="{{STATIC_URL}}css/styles.css" type="text/css" media="screen" /> #}
+  <!--[if lte IE 9]><link rel="stylesheet" href="{{STATIC_URL}}css/rewrite/ie.css" type="text/css" media="screen" /><![endif]-->
+  <link rel="stylesheet" href="{{STATIC_URL}}css/rewrite/1140.css" type="text/css" media="screen" />
+  {# <link rel="stylesheet" href="{{STATIC_URL}}css/rewrite/styles.css" type="text/css" media="screen" /> #}
   {% endblock %}
 
   {% block extra_head_html %}{% endblock %}
@@ -36,16 +36,23 @@
 
   {% block js %}
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
-  <script>window.jQuery || document.write("<script src='{{STATIC_URL}}js/libs/jquery-1.5.1.min.js'>\x3C/script>")</script>
-  <script src="{{STATIC_URL}}js/plugins.js"></script>
-  <script src="{{STATIC_URL}}js/script.js"></script>
-  <script type="text/javascript" src="{{STATIC_URL}}js/libs/css3-mediaqueries.js"></script>
+  <script>window.jQuery || document.write("<script src='{{STATIC_URL}}js/rewrite/libs/jquery-1.5.1.min.js'>\x3C/script>")</script>
+  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.15/jquery-ui.min.js"></script>
+    
+  <script src="{{STATIC_URL}}js/rewrite/plugins.js"></script>
+  <script src="{{STATIC_URL}}js/rewrite/script.js"></script>
+  <script type="text/javascript" src="{{STATIC_URL}}js/rewrite/libs/css3-mediaqueries.js"></script>
 
+  <script src="{{STATIC_URL}}js/rewrite/libs/nicEdit.js"></script>
+  <script src="{{STATIC_URL}}js/rewrite/rewrite.js"></script>
   <!--[if lt IE 7 ]>
-    <script src="{{STATIC_URL}}js/libs/dd_belatedpng.js"></script>
+    <script src="{{STATIC_URL}}js/rewrite/libs/dd_belatedpng.js"></script>
     <script>DD_belatedPNG.fix("img, .png_bg");</script>
   <![endif]-->
-
+  <script>
+  	var STATIC_URL = "{{STATIC_URL}}";
+  	var MEDIA_URL = "{{MEDIA_URL}}";
+  </script>
 {#   <script> 	#}
 {#     var _gaq=[["_setAccount","UA-XXXXX-X"],["_trackPageview"]]; // Change UA-XXXXX-X to be your site's ID  	#}
 {#     (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1; 	#}
